# detect-indent-py

./: .gitignore  README.md  license  pyproject.toml
.github/workflows/: CI.yml  publish-pypi.yml
src/detect_indent/: __init__.py  detect_indentation.py
test/: test.py
