[build-system]
requires = ["setuptools>=68.2"]
build-backend = "setuptools.build_meta"

[project]
name = "detect-indent"
version = "1.0.0"
authors = [
  { name="Ethan Van Der Heijden", email="ethanvanderheijden@gmail.com" },
]
description = "Detects the indentation type and size of any string."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ethan-Vanderheijden/detect-indent-py"
"Bug Tracker" = "https://github.com/Ethan-Vanderheijden/detect-indent-py/issues"
